--- a/DSinternship.ipynb
+++ b/DSinternship.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1qlAmwaoij2ROCY5W5WkK",
+      "authorship_tag": "ABX9TyPPbIyT7lbEmg/5jvpXGrZ7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Pandas:\n"
+      ],
+      "metadata": {
+        "id": "yyvZ6_Msjxm7"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "OAPX95H2w1LC",
         "colab": {
@@ -155,7 +164,7 @@
         "id": "ZN-x2UkhOjBz",
         "outputId": "76e9983d-2469-48d0-a412-0df4a2c4f64b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3367,6 +3376,185 @@
           },
           "metadata": {},
           "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Numpy Practice:\n"
+      ],
+      "metadata": {
+        "id": "Wz3kkXqAkN7r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n"
+      ],
+      "metadata": {
+        "id": "ZaglmzX-k7a8"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=[1,2,3,4,5]\n",
+        "y=np.array(x)\n",
+        "y1 = y.tolist()\n",
+        "print(y)\n",
+        "#ndim\n",
+        "#range\n",
+        "#arange\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-7wVh0twkNNW",
+        "outputId": "b5a015c1-16e6-43ab-9881-2d11100a7517"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.array(42)\n",
+        "b = np.array([1, 2, 3, 4, 5])\n",
+        "c = np.array([[1, 2, 3], [4, 5, 6]])\n",
+        "d = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
+        "arr = np.array([1, 2, 3, 4],ndmin=2)\n",
+        "print(arr)\n",
+        "print(a.ndim)\n",
+        "print(b.ndim)\n",
+        "print(c.ndim)\n",
+        "print(d.ndim)\n",
+        "\n",
+        "e=arr.reshape(4,1,1)\n",
+        "print(e)\n",
+        "print(e.ndim)"
+      ],
+      "metadata": {
+        "id": "GLw5X0ntnMQp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ea66ce6-c590-4a89-a8d2-5ce9f236b0d0"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3 4]]\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "[[[1]]\n",
+            "\n",
+            " [[2]]\n",
+            "\n",
+            " [[3]]\n",
+            "\n",
+            " [[4]]]\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Matrix concepts are possible here\n",
+        "#A-LI=0   eigen vectors and values\n",
+        "#Also matrices are just nested arrays\n",
+        "x = np.array([[1,2,3],[4,5,6]])\n",
+        "print(x)\n",
+        "print(x.T)\n",
+        "print(x.reshape(3,2))\n",
+        "y = np.eye(1)\n",
+        "print(y)\n",
+        "#eye()\n",
+        "#linspace"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oODwJNxQlNhl",
+        "outputId": "1bfb39be-2461-4301-9138-69ae0546f2e0"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "[[1 4]\n",
+            " [2 5]\n",
+            " [3 6]]\n",
+            "[[1 2]\n",
+            " [3 4]\n",
+            " [5 6]]\n",
+            "[[1.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#calculate eigen vector, eigen value of the user given matrix.\n",
+        "import numpy as np\n",
+        "\n",
+        "# A 2x2 matrix\n",
+        "A = np.array([[4, 2],\n",
+        "              [1, 3]])\n",
+        "\n",
+        "# Compute eigenvalues and eigenvectors\n",
+        "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+        "\n",
+        "print(\"Eigenvalues:\")\n",
+        "print(eigenvalues)\n",
+        "print(\"\\nEigenvectors:\")\n",
+        "print(eigenvectors)\n"
+      ],
+      "metadata": {
+        "id": "ER1kyj_Np2Jn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f298b6b-cb38-4610-e86f-8f547b2f1816"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues:\n",
+            "[5. 2.]\n",
+            "\n",
+            "Eigenvectors:\n",
+            "[[ 0.89442719 -0.70710678]\n",
+            " [ 0.4472136   0.70710678]]\n"
+          ]
         }
       ]
     }
